# VkDoom

./: .gitmodules  AppImageBuilder.yml  CMakeLists.txt  README.md  auto-setup-linux.sh  auto-setup-windows-arm.cmd  auto-setup-windows.cmd  build-guide.txt
.github/workflows/: appimage.yml  continuous_integration.yml
libraries/ZVulkan/: CMakeLists.txt
libraries/ZVulkan/src/: vulkanbuilders.cpp  vulkandevice.cpp  vulkaninstance.cpp  vulkanswapchain.cpp
libraries/ZWidget/: CMakeLists.txt
libraries/dragonbook/: CMakeLists.txt  LICENSE.md  README.md
libraries/dragonbook/src/: CMakeLists.txt  dragonbook.h
libraries/dragonbook/src/dragonbook/: IR.h  IRBasicBlock.h  IRBlockAllocator.h  IRBuilder.h  IRContext.h  IRFunction.h  IRInst.h  IRInstValidator.h  IRInstVisitor.h  IRStackToRegisterPass.h  IRType.h  IRValue.h  JITRuntime.h
libraries/dragonbook/src/ir/: IRBuilder.cpp  IRContext.cpp  IRFunction.cpp  IRInstValidator.cpp  IRStackToRegisterPass.cpp
libraries/dragonbook/src/jit/: JITRuntime.cpp  NativeSymbolResolver.cpp  NativeSymbolResolver.h  StackTrace.cpp  StackTrace.h
libraries/dragonbook/src/mc/: AssemblyWriter.cpp  AssemblyWriter.h  MachineCodeHolder.cpp  MachineCodeHolder.h  MachineCodeWriter.cpp  MachineCodeWriter.h  MachineInst.h  MachineInstSelection.cpp  MachineInstSelection.h  RegisterAllocator.cpp  RegisterAllocator.h  UnwindInfoUnix.cpp  UnwindInfoUnix.h  UnwindInfoWindows.cpp  UnwindInfoWindows.h
libraries/dragonbook/test/: CMakeLists.txt  main.cpp
specs/: udmf_zdoom.txt
src/: CMakeLists.txt  am_map.cpp  d_anonstats.cpp  d_defcvars.cpp  d_iwad.cpp  d_main.cpp  d_main.h  d_net.cpp  d_net.h  d_netinfo.cpp  doomdata.h  g_cvars.cpp  g_game.cpp  g_level.cpp  g_level.h  g_levellocals.h  gameconfigfile.cpp  gameconfigfile.h  gamemain.cpp  levelmeshhelper.cpp  levelmeshhelper.h  namedef_custom.h  p_saveg.cpp  p_setup.cpp  toolmain.cpp  version.h
src/commandlets/: commandlet.cpp  commandlet.h  lightmapcmd.cpp  lightmapcmd.h
src/common/2d/: v_2ddrawer.cpp  v_2ddrawer.h  wipe.cpp  wipe.h
src/common/console/: c_console.cpp  c_console.h  c_cvars.cpp  c_cvars.h
src/common/cutscenes/: movieplayer.cpp  screenjob.cpp
src/common/engine/: date.cpp  fcolormap.h  filesystem.h  gamestate.h  i_interface.cpp  i_interface.h  i_net.cpp  namedef.h  sc_man.cpp  sc_man.h  serializer.cpp  st_start.h
src/common/fonts/: schrift.cpp  ttffont.cpp  v_font.cpp
src/common/menu/: menu.cpp  menudef.cpp
src/common/models/: model.h  model_iqm.h  model_kvx.h  model_md2.h  model_md3.h  model_obj.h  (+8 more)
src/console/: c_cmds.cpp
src/g_statusbar/: sbarinfo.cpp  shared_sbar.cpp
src/gamedata/: d_dehacked.cpp  decallib.cpp  g_mapinfo.cpp  g_mapinfo.h  gi.cpp  gi.h  info.cpp  r_defs.h
src/intermission/: intermission_parse.cpp
src/launcher/: launcherwindow.cpp  launcherwindow.h  playgamepage.cpp  playgamepage.h  settingspage.h
src/maploader/: maploader.cpp  maploader.h  specials.cpp  udmf.cpp
src/menu/: doommenu.cpp  playermenu.cpp
src/playsim/: a_decals.cpp  a_dynlight.cpp  a_dynlight.h  a_fogball.cpp  a_fogball.h  actor.h  dthinker.cpp  dthinker.h  p_actionfunctions.cpp  p_effect.cpp  p_effect.h  p_map.cpp  p_mobj.cpp  p_pspr.cpp  p_trace.cpp  p_user.cpp  p_visualthinker.h
src/posix/: i_steam.cpp  zdoom.xpm
src/r_data/: a_dynlightdata.cpp  gldefs.cpp  models.cpp  r_interpolate.cpp
src/rendering/: r_utility.cpp  r_utility.h
src/scripting/: thingdef.cpp  thingdef_data.cpp  vmiterators.cpp  vmthunks.cpp  vmthunks_actors.cpp
src/win32/: i_steam.cpp  zdoom.rc
wadsrc/: CMakeLists.txt
wadsrc/static/: bdrf.lut  language.0  language.csv  language.def  menudef.txt  startupinfo.txt  zscript.txt
wadsrc_extra/static/: iwadinfo.txt
(+387 files in other folders)
